tests/ui/issues/issue-46771.stderr
error[E0618]: expected function, found `Foo`
  --> $DIR/issue-46771.rs:3:35
   |
LL |     struct Foo;
   |     ---------- `Foo` defined here
LL |     (1 .. 2).into_iter().find(|_| Foo(0) == 0);
   |                                   ^^^---
   |                                   |
   |                                   call expression requires function

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0618`.
